--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,7 +8,7 @@ name: Docker
 on:
   workflow_dispatch:
   push:
-    # branches: [ master, develop]
+    branches: [ main, develop]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
 #  pull_request:
