--- a/.env-issuer.sample
+++ b/.env-issuer.sample
@@ -4,7 +4,7 @@ ISSUER_NATIVE_PROOF_GENERATION_ENABLED=true
 ISSUER_PUBLISH_KEY_PATH=pbkey
 ISSUER_ONCHAIN_PUBLISH_STATE_FREQUENCY=1m
 ISSUER_ONCHAIN_CHECK_STATUS_FREQUENCY=1m
-ISSUER_DATABASE_URL=postgres://polygonid:polygonid@postgres:5432/platformid?sslmode=disable
+ISSUER_DATABASE_URL=postgres://polygonid:polygonid@postgres:5432/platformid_mainnet?sslmode=disable
 ISSUER_LOG_LEVEL=-4
 ISSUER_LOG_MODE=2
 ISSUER_API_AUTH_USER=user-issuer
