--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "errcheck",
         "forbidigo"
-    ]
+    ],
+    "ansible.python.interpreterPath": "/usr/bin/python3"
 }
